--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,7 @@ rvm:
   - jruby-19mode # JRuby in 1.9 mode
   - rbx-2.1.1
   - 1.8.7
+
+before_install:
+    - gem update --system
+    - gem --version
