--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: ruby
+
 rvm:
   - 1.9.3
-  - jruby-18mode # JRuby in 1.8 mode
-  - jruby-19mode # JRuby in 1.9 mode
-  - rbx-2.1.1
-  - 1.8.7
+  - 2.1.3
+
+bundler_args: --without production
 
 before_install:
     - gem update --system
